fix: wrap heading

--- a/components/home/hero/HeroComponent.module.scss
+++ b/components/home/hero/HeroComponent.module.scss
@@ -8,7 +8,7 @@
   }
 
   .hero_heading {
-    @apply max-w-[310px] md:max-w-[400px] text-h2 md:text-h1 font-normal leading-tight mb-4;
+    @apply max-w-[250px] md:max-w-[350px] text-h2 md:text-h1 leading-tight mb-4;
   }
 
   .blog_button {
